--- a/dashlane.nuspec
+++ b/dashlane.nuspec
@@ -8,13 +8,17 @@
     <owners>Andreas Niedermair</owners>
     <description>Never forget another password
 Never misplaced. Never forgotten. Dashlane securely remembers all of your passwords.</description>
-    <projectUrl>https://www.dashlane.com/</projectUrl>
-    <packageSourceUrl>https://github.com/dittodhole/chocolatey-dashlane</packageSourceUrl>
-    <licenseUrl>https://www.dashlane.com/terms</licenseUrl>
-    <tags>dashlane admin</tags>
     <summary>Dashlane is a password manager app and secure digital wallet.</summary>
-    <copyright>© Dashlane, Inc</copyright>
     <iconUrl>https://raw.githubusercontent.com/dittodhole/chocolatey-dashlane/master/assets/icon256.png</iconUrl>
+    <packageSourceUrl>https://github.com/dittodhole/chocolatey-dashlane</packageSourceUrl>
+    <bugTrackerUrl>https://github.com/dittodhole/chocolatey-dashlane/issues</bugTrackerUrl>
+    <projectUrl>https://www.dashlane.com/</projectUrl>
+    <projectSourceUrl>https://www.dashlane.com</projectSourceUrl>
+    <licenseUrl>https://www.dashlane.com/terms</licenseUrl>
+    <docsUrl>https://www.dashlane.com/features/password-manager</docsUrl>
+    <mailingListUrl>https://support.dashlane.com</mailingListUrl>
+    <tags>dashlane admin</tags>
+    <copyright>© Dashlane, Inc</copyright>
   </metadata>
   <files>
     <file src="tools\**" target="tools" />
