Fixed owners in .nuspec-file

--- a/dashlane.nuspec
+++ b/dashlane.nuspec
@@ -5,7 +5,7 @@
     <title>dashlane</title>
     <version>5.6.0.15520</version>
     <authors>dashlane</authors>
-    <owners>Andreas Niedermair</owners>
+    <owners>dittodhole</owners>
     <description>Never forget another password
 Never misplaced. Never forgotten. Dashlane securely remembers all of your passwords.</description>
     <summary>Dashlane is a password manager app and secure digital wallet.</summary>
