--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
+  "private": "true",
   "name": "chocolatey-dashlane",
   "version": "5.12.0-19744",
   "description": "Never forget another password\nNever misplaced. Never forgotten. Dashlane securely remembers all of your passwords.",
-  "dependencies": {},
   "devDependencies": {
     "all-contributors-cli": "^4.11.1"
   },
@@ -19,7 +19,10 @@
     "type": "git",
     "url": "git+https://github.com/dittodhole/chocolatey-dashlane.git"
   },
-  "author": "Andreas Niedermair (@dittodhole)",
+  "author": {
+    "name": "Andreas Niedermair (@dittodhole)",
+    "url": "dittodhole.github.io"
+  },
   "license": "SEE LICENSE IN https://github.com/dittodhole/WTFNMFPLv3",
   "bugs": {
     "url": "https://github.com/dittodhole/chocolatey-dashlane/issues"
