--- a/package.json
+++ b/package.json
@@ -1,19 +1,20 @@
 {
   "private": "true",
-  "name": "chocolatey-dashlane",
-  "version": "5.12.0-19744",
   "description": "Never forget another password\nNever misplaced. Never forgotten. Dashlane securely remembers all of your passwords.",
   "devDependencies": {
-    "all-contributors-cli": "^4.11.1"
+    "JSONStream": "^1.3.2",
+    "all-contributors-cli": "^4.11.1",
+    "glob": "^7.1.2",
+    "request": "^2.87.0",
+    "win-version-info": "^2.0.0"
   },
   "scripts": {
     "contributors:init": "all-contributors init",
     "contributors:add": "all-contributors add",
     "contributors:generate": "all-contributors generate",
-    "build": "npm run-script build:package",
-    "build:package": "choco pack",
-    "deploy": "npm run-script deploy:package",
-    "deploy:package": "choco push"
+    "prebuild": "node scripts/prebuild.js",
+    "build": "choco pack",
+    "publish": "choco push"
   },
   "repository": {
     "type": "git",
