--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,5 @@
-node_modules/
-package-lock.json
-*.nupkg
-
-dashlane.nuspec
-tools/chocolateyinstall.ps1
+artifacts/*.nupkg
+build/node_modules/
+build/package-lock.json
+src/dashlane.nuspec
+src/tools/chocolateyinstall.ps1
