updated appveyor configuration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -15,12 +15,12 @@ nuget:
   account_feed: true
   project_feed: true
 deploy:
-- provider: NuGet
-  name: Chocolatey
-  server: https://push.chocolatey.org/
-  api_key:
-    secure: +fTRQpSd17emUj2c3ZNEMkulTNDn30de0EEGJ0vP/rA6dWVsazPUgRG/zEps0Xmh
-  artifact: nupkg
+#- provider: NuGet
+#  name: Chocolatey
+#  server: https://push.chocolatey.org/
+#  api_key:
+#    secure: +fTRQpSd17emUj2c3ZNEMkulTNDn30de0EEGJ0vP/rA6dWVsazPUgRG/zEps0Xmh
+#  artifact: nupkg
 - provider: NuGet
   name: MyGet
   server: https://www.myget.org/F/dittodhole/api/v2/package
