--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,14 +1,10 @@
 version: '{build}'
 image: Visual Studio 2017
 skip_tags: true
-branches:
-  only:
-    - master
-    - develop
 only_commits:
   files:
-    - build/*
-    - src/*
+    - build/**/*
+    - src/**/*
     - appveyor.yml
 before_build:
 - cmd: cd build
@@ -20,22 +16,27 @@ artifacts:
 - path: artifacts/*.nupkg
   name: nupkg
   type: File
-nuget:
-  account_feed: true
-  project_feed: true
-deploy:
-- provider: NuGet
-  name: Chocolatey
-  server: https://push.chocolatey.org/
-  api_key:
-    secure: +fTRQpSd17emUj2c3ZNEMkulTNDn30de0EEGJ0vP/rA6dWVsazPUgRG/zEps0Xmh
-  artifact: nupkg
-  on:
-    branch: master
-- provider: NuGet
-  name: MyGet
-  server: https://www.myget.org/F/dittodhole/api/v2/package
-  api_key:
-    secure: c9r6oyxFOqnfj0xezZcLIoopgoBUb5ib9nrTYMkXDTqzvMrrXmprbHgyldag6NZ4
-  artifact: nupkg
-  symbol_server: https://www.myget.org/F/dittodhole/symbols/api/v2/package
+-
+  branches:
+    only:
+      - master
+  deploy:
+    provider: NuGet
+    name: Chocolatey
+    server: https://push.chocolatey.org/
+    api_key:
+      secure: +fTRQpSd17emUj2c3ZNEMkulTNDn30de0EEGJ0vP/rA6dWVsazPUgRG/zEps0Xmh
+    artifact: nupkg
+-
+  branches:
+    only:
+      - master
+      - develop
+  deploy:
+    provider: NuGet
+    name: MyGet
+    server: https://www.myget.org/F/dittodhole/api/v2/package
+    api_key:
+      secure: c9r6oyxFOqnfj0xezZcLIoopgoBUb5ib9nrTYMkXDTqzvMrrXmprbHgyldag6NZ4
+    artifact: nupkg
+    symbol_server: https://www.myget.org/F/dittodhole/symbols/api/v2/package
