updated appveyor configuration

--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,8 +3,8 @@ image: Visual Studio 2017
 skip_tags: true
 only_commits:
   files:
-    - build/**/*
-    - src/**/*
+    - build/
+    - src/
     - appveyor.yml
 before_build:
 - cmd: cd build
